Aggiunta classi generali